--- a/view/css/clndr.css
+++ b/view/css/clndr.css
@@ -10,8 +10,7 @@
 #mini-clndr {
   font-family: Asap, Helvetica, Arial;
   margin: 0 auto;
-  width: 324px;
-  height: auto;
+  width: 100%
 /*  -moz-box-shadow: 4px 4px 0 #343434;
   -webkit-box-shadow: 4px 4px 0 #343434;
   box-shadow: 4px 4px 0 #343434;*/
@@ -28,7 +27,7 @@
 }
 #mini-clndr .clndr .controls .clndr-previous-button,
 #mini-clndr .clndr .controls .clndr-next-button {
-  width: 15%;
+  width: 14.28%;
   padding-top: 5px;
   padding-bottom: 5px;
   display: inline-block;
@@ -67,14 +66,14 @@
 #mini-clndr .clndr .days-container {
   position: relative;
   width: 100%;
-  height: 186px;
+  height: 100px;
   display: inline-block;
 }
 #mini-clndr .clndr .days-container .days {
   position: absolute;
   left: 0;
-  /*width: 100%;*/
-  /*height: auto;*/
+  width: 100%;
+  height: auto;
   -webkit-transition: left 0.5s;
   -moz-transition: left 0.5s;
   -ms-transition: left 0.5s;
@@ -84,16 +83,16 @@
 }
 #mini-clndr .clndr .days-container .days .day,
 #mini-clndr .clndr .days-container .days .empty {
-  width: 45px;
+  width: 14.28%;
+  height: 3em;
+  border-style: outset;
+  border-color: rgb(69, 193, 200);
   display: inline-block;
   padding-top: 8px;
   padding-bottom: 8px;
   font-size: 1em;
   text-align: center;
-  /*color: #212121;*/
   color: #212121;
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 #mini-clndr .clndr .days-container .days .day.event,
 #mini-clndr .clndr .days-container .days .empty.event {
@@ -108,15 +107,14 @@
 }
 #mini-clndr .clndr .days-container .days .day.event:hover,
 #mini-clndr .clndr .days-container .days .empty.event:hover {
-  /*background-color: #b8b8b8;*/
-  background-color: #0D77B6;
+  background-color: #b8b8b8;
 }
 #mini-clndr .clndr .days-container .days .day.adjacent-month,
 #mini-clndr .clndr .days-container .days .empty.adjacent-month {
   color: rgba(0, 0, 0, 0.3);
 }
 #mini-clndr .clndr .days-container .days .empty {
-  height: 31px;
+  height: 10px;
   vertical-align: bottom;
 }
 #mini-clndr .clndr .days-container .days .headers {
@@ -126,7 +124,7 @@
   padding-bottom: 5px;
 }
 #mini-clndr .clndr .days-container .days .headers .day-header {
-  width: 46px;
+  width: 14.28%;
   display: inline-block;
   text-align: center;
   color: white;
