--- a/view/css/style.css
+++ b/view/css/style.css
@@ -1,3 +1,24 @@
+body{
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
 .navbar-brand{
   padding: 5px 10px;
+}
+
+.top-space{
+  margin-top: 2em;
+}
+
+.red{
+  background: red;
+}
+
+.green{
+  background: green;
+}
+
+.blue{
+  background: blue;
 }
