--- a/view/css/style.css
+++ b/view/css/style.css
@@ -36,6 +36,7 @@ body{
 .link:hover{
   text-decoration: none;
   background: #90caf9;
+  border-radius: 5px;
 }
 div.links ul{
   text-align: left;
@@ -52,4 +53,8 @@ div.links ul li{
 
 .center{
   text-align: center;
+}
+
+.checkbox-kitchen{
+  margin-bottom: 2em;
 }
